<resources>
    <string name="app_name">Atomyze_test</string>
    <string name="title">Currencies</string>
    <string name="error_message">Something went wrong :(</string>
    <string name="update">Update</string>
    <string name="exchange">Exchange</string>
    <string name="exchange_ruble">Exchange ₽</string>
    <string name="exchange_hint" translatable="false">100.00</string>
    <string name="calculate">Calculate</string>
</resources>