<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/title"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:background="#afa"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            tools:ignore="RtlSymmetry" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/exchange_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="16dp"
            android:text="@string/exchange_ruble"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <EditText
            android:id="@+id/exchange"
            android:layout_width="120dp"
            android:layout_height="20dp"
            android:hint="@string/exchange_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:layout_marginStart="16dp"
            android:background="#efe"
            app:layout_constraintBottom_toBottomOf="@id/exchange_title"
            app:layout_constraintLeft_toRightOf="@id/exchange_title"
            app:layout_constraintTop_toTopOf="@id/exchange_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/exchange_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:background="#aca"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="@+id/exchange_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/exchange_title"
            tools:ignore="RtlSymmetry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/currencies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exchange_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>